--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+      crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +23,57 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here --> 
+        <div class="row">
+          <div class="col-md-1 col-sm-1">9 AM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+         
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">10 AM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">11 AM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">12 PM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">1 PM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">2 PM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">3 PM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">4 PM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
+        <div class="row">
+          <div class="col-md-1 col-sm-1">5 PM</div>
+          <textarea class="col-ms-10 col-sm-10"></textarea>
+          <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
