--- a/index.html
+++ b/index.html
@@ -24,50 +24,50 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here --> 
-        <div class="row">
-          <div class="col-md-1 col-sm-1">9 AM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">9 AM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
          
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">10 AM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">10 AM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">11 AM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">11 AM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">12 PM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">12 PM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">1 PM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">1 PM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">2 PM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">2 PM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">3 PM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">3 PM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">4 PM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">4 PM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
-        <div class="row">
-          <div class="col-md-1 col-sm-1">5 PM</div>
-          <textarea class="col-ms-10 col-sm-10"></textarea>
+        <div class="row time-block">
+          <div class="hour col-md-1">5 PM</div>
+          <textarea class="col md-10 description"></textarea>
           <button class="btn saveBtn col-md-1"><span class="fa fa-save"></span></button>
         </div>
     </div>
